# kv_server

./: Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: flake8.yml  lint.yml  tests.yml
src/app/: main.py  models.py  run.py
src/app/api/: __init__.py  helpers.py  main.py  routes.py  run.py
src/app/api/storage_api/: v1.py
src/app/key_value_storage/: base.py
src/app/key_value_storage/redis/: __init__.py  client.py
src/app/logic/: key_value_storage_crud.py  redis_crud.py
src/app/redis/: __init__.py  client.py
src/common/: config.py  logging.py
src/tests/: conftest.py  test_api.py
